# OptiNetSim-backend

./: README.md  pyproject.toml
src/optinetsim_backend/: run.py
src/optinetsim_backend/app/: __init__.py  auth.py  config.py  create_connection.py  delete_connection.py  equipment_library.py  models.py  modify_connection.py  routes.py  topology.py
src/optinetsim_backend/app/auth/: __init__.py  auth.py
src/optinetsim_backend/app/database/: __init__.py  equipment_library.py  global_config.py  import_export.py  models.py  network.py  topology.py
src/optinetsim_backend/app/simulation/: __init__.py  core.py  loader.py  sim_params.py  simulation_api.py
