[project]
name = "OptiNetSim-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zeroSignal", email = "zerosignal0101@proton.me"},
]
dependencies = [
    "Flask>=3.0.3",
    "Flask-RESTful>=0.3.10",
    "Flask-JWT-Extended>=4.6.0",
    "PyMongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "gnpy==2.11.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "BSD 3-Clause License"}


[tool.pdm]
distribution = false
